tests/baselines/reference/emptyIndexer.errors.txt
emptyIndexer.ts(12,9): error TS2454: Variable 'x' is used before being assigned.


==== emptyIndexer.ts (1 errors) ====
    interface I1 {
    	m(): number;
    }
    
    interface I2 {
    	[s:string]: I1;
    }
    
    
    var x: I2;
    
    var n = x[''].m(); // should not crash compiler
            ~
!!! error TS2454: Variable 'x' is used before being assigned.